# In_Situ_Surrogate_Modeling_With_Ascent

./: LICENSE  README.md
ascent-proxy/: CHANGELOG.md  azure-pipelines.yml
ascent-proxy/scripts/: ascent_rc_compiler.py
ascent-proxy/scripts/azemu/: azemu-config.yaml
ascent-proxy/scripts/build_ascent/: 2025_03_21_conduit_pr1370.patch  2025_03_25_conduit_hdf5_win_detect_fix.patch  2025_03_conduit_windows_symbol_export_fix.patch  build_ascent.sh
ascent-proxy/scripts/ci/docker/: build_all_base.sh  build_all_tpls.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_cuda_11.8.0_devel/: Dockerfile  build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_cuda_11.8.0_devel_tpls/: Dockerfile  build.sh  docker_uberenv_build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_cuda_12.8.1_devel/: Dockerfile  build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_cuda_12.8.1_devel_tpls/: Dockerfile  build.sh  docker_uberenv_build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_devel/: Dockerfile
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_devel_tpls/: docker_uberenv_build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_rocm_6.3.4_devel/: Dockerfile  build.sh
ascent-proxy/scripts/ci/docker/alpinedav_ubuntu_22.04_rocm_6.3.4_devel_build_ascent_tpls/: Dockerfile  build.sh
ascent-proxy/src/cmake/: SetupBLT.cmake
ascent-proxy/src/config/: CMakeLists.txt  ascent_setup_deps.cmake
ascent-proxy/src/docs/sphinx/: AscentAPI.rst
ascent-proxy/src/docs/sphinx/Actions/: Actions.rst  Examples.rst  Pipelines.rst  Scenes.rst
ascent-proxy/src/docs/sphinx/Actions/examples/: color_table.yaml  include_color_table.yaml
ascent-proxy/src/docs/sphinx/developer_docs/: Flow_Filter.rst
ascent-proxy/src/examples/docker/ubuntu-build-ascent/: Dockerfile  build.sh  docker_build_ascent.sh
ascent-proxy/src/examples/proxies/kripke/: CMakeLists.txt
ascent-proxy/src/examples/proxies/kripke/Kripke/: Sweep_Solver.cpp
ascent-proxy/src/examples/proxies/laghos/: CMakeLists.txt  laghos.cpp
ascent-proxy/src/examples/proxies/lulesh2.0.3/: CMakeLists.txt
ascent-proxy/src/examples/using-with-make/: Makefile
ascent-proxy/src/examples/using-with-make-mpi/: Makefile
ascent-proxy/src/libs/apcomp/: CMakeLists.txt  compositor.cpp
ascent-proxy/src/libs/apcomp/internal/: MPICollect.hpp
ascent-proxy/src/libs/ascent/: CMakeLists.txt  ascent.cpp  ascent_config.h.in
ascent-proxy/src/libs/ascent/python/ascent_module/: CMakeLists.txt
ascent-proxy/src/libs/ascent/runtimes/: ascent_main_runtime.cpp  ascent_main_runtime.hpp  ascent_vtkh_data_adapter.cpp
ascent-proxy/src/libs/ascent/runtimes/expressions/: ascent_blueprint_device_dispatch.hpp  ascent_execution_manager.cpp  ascent_execution_manager.hpp  ascent_execution_policies.cpp  ascent_execution_policies.hpp
ascent-proxy/src/libs/ascent/runtimes/flow_filters/: ascent_runtime_conduit_to_vtkm_parsing.cpp  ascent_runtime_dray_filters.cpp  ascent_runtime_param_check.cpp  ascent_runtime_param_check.hpp  ascent_runtime_rendering_filters.cpp  ascent_runtime_trigger_filters.cpp  ascent_runtime_vtkh_filters.cpp
ascent-proxy/src/libs/ascent/utils/: ascent_actions_utils.cpp  ascent_actions_utils.hpp  ascent_resources_cinema_web.hpp  ascent_string_utils.cpp
ascent-proxy/src/libs/dray/: CMakeLists.txt
ascent-proxy/src/libs/dray/filters/: volume_balance.cpp
ascent-proxy/src/libs/dray/queries/: point_location.cpp
ascent-proxy/src/libs/dray/utils/: string_utils.cpp
ascent-proxy/src/libs/flow/python/: CMakeLists.txt
ascent-proxy/src/libs/logging/: ascent_logging.cpp
ascent-proxy/src/libs/rover/: CMakeLists.txt
ascent-proxy/src/libs/vtkh/: CMakeLists.txt
ascent-proxy/src/libs/vtkh/compositing/: Compositor.cpp  MPICollect.hpp
ascent-proxy/src/libs/vtkh/filters/: PointTransform.cpp  PointTransform.hpp  Slice.cpp  UniformGrid.cpp
ascent-proxy/src/libs/vtkh/rendering/: PointRenderer.cpp  ScalarRenderer.cpp
ascent-proxy/src/libs/vtkh/vtkm_filters/: vtkmMeshQuality.cpp
ascent-proxy/src/tests/ascent/: t_ascent_ascent_runtime.cpp  t_ascent_commands.cpp  t_ascent_derived.cpp  t_ascent_info.cpp  t_ascent_render_2d.cpp  t_ascent_render_3d.cpp  t_ascent_runtime_options.cpp  t_ascent_scalar_renderer.cpp  t_ascent_transform.cpp  t_ascent_triggers.cpp  t_ascent_uniform_grid.cpp
ascent-proxy/src/tests/vtkh/: t_vtk-h_point_transform.cpp  t_vtk-h_warpx_streamline.cpp  t_vtk-h_warpx_streamline_par.cpp
ascent-proxy/src/utilities/visit_session_converters/: session_to_color_table.py
